k8s/manifests/namespace.yaml
# Reminder: Main task is to make Excalidraw suitable for K8s deployment with Helm charts
apiVersion: v1
kind: Namespace
metadata:
  name: excalidraw
  labels:
    name: excalidraw
    app.kubernetes.io/name: excalidraw
    app.kubernetes.io/component: namespace
