k8s/manifests/service.yaml
# Reminder: Main task is to make Excalidraw suitable for K8s deployment with Helm charts
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    app.kubernetes.io/name: excalidraw
    app.kubernetes.io/instance: excalidraw
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: excalidraw
    app.kubernetes.io/instance: excalidraw
